# QLFAUST

./: .gitignore  BridgingHeader.h  LICENSE  README.md
.github/workflows/: objective-c-xcode.yml
FAUSTViewer/: FAUSTViewerApp.swift
FaustBridge/: FaustBridge.h  FaustBridge.mm
ImportLibrary/: CMakeLists.txt  generate_xcode_project.sh
ImportLibrary/Xcode/CMakeScripts/: ReRunCMake.make
ImportLibrary/Xcode/libFAUSTWithLLVMDownloader.xcodeproj/: project.pbxproj
ImportLibrary/Xcode/libFAUSTWithLLVMDownloader.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
ImportLibrary/Xcode/libFAUSTWithLLVMDownloader.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
QLFAUST/: ContentView.swift  FAUSTQuickLookHostApp.swift  Info.plist
QLFAUST.xcodeproj/: project.pbxproj
QLFAUST.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
QLFAUST.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
QLFAUST.xcodeproj/xcshareddata/xcschemes/: FAUSTViewer.xcscheme  QLFAUST.xcscheme  QLFAUSTExtension.xcscheme
QLFAUST.xcodeproj/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
QLFAUST.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
QLFAUST/Assets.xcassets/AppIcon.appiconset/: Contents.json
QLFAUSTExtension/: AudioEngine.swift  ContentView.swift  Info.plist  PreviewProvider.swift  PreviewViewController.swift  QLFAUSTView.swift
QLFAUSTExtension/Base.lproj/: PreviewViewController.xib
Tests/: karplus_example_export.dsp  library_test.dsp  mydsp.dsp  some_library.lib  uitester.dsp
local_modules/QLFAUST_UI/: Package.resolved  Package.swift
local_modules/QLFAUST_UI/.swiftpm/xcode/package.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
local_modules/QLFAUST_UI/.swiftpm/xcode/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
local_modules/QLFAUST_UI/.swiftpm/xcode/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
local_modules/QLFAUST_UI/Sources/: FaustSyntaxHighlighter.swift  PreviewDSP.swift  PreviewFAUSTSource.swift  PreviewSVG.swift  QLFAUST_UI.swift
